# askweb

./: .cursor  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  project_structure  pyproject.toml
src/askweb/: __init__.py  analysis.py  cli.py  content.py  models.py  openai_client.py  prompts.py  search.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_content.py  test_models.py  test_search.py
